# gpustack-modelsync

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  k8s.yaml  pyproject.toml  registry.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
modelsync/: __init__.py  app.py  config.py  gpustack.py  reconcile.py  syncthing.py  web.py
scripts/: demo.py  verify_live.py
tests/: conftest.py  test_choose_source_props.py  test_core.py  test_edge_cases.py  test_eligible.py  test_endpoints.py  test_full_loop.py  test_fuzz.py  test_gpustack_http.py  test_gpustack_parse.py  test_hardening.py  test_loops.py  test_modeldir.py  test_reconcile.py  test_web_js.py
