[project]
name = "gpustack-modelsync"
version = "0.1.0"
description = "Sync GPUStack model folders across cluster nodes via Syncthing"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
modelsync = "modelsync.app:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "hypothesis>=6", "pyright>=1.1", "ruff>=0.8"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Pin the async fixture loop scope to the future pytest-asyncio default now, so an
# upgrade can't silently change fixture/event-loop semantics under the suite.
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # starlette TestClient/httpx pairing deprecation; upstream, not actionable here
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["modelsync"]

[tool.ruff.lint]
# Default rules + bugbear, async, security, comprehensions, pie, return,
# simplify, unused-args, ruff-specific. Deliberate exceptions below.
extend-select = ["B", "ASYNC", "S", "C4", "PIE", "RET", "SIM", "ARG", "RUF"]
ignore = [
    "S104",    # binding 0.0.0.0 is deliberate; fail-closed check in main() covers it
    "ASYNC240",  # one-time STATE.mkdir at startup; nothing else runs yet
    "RUF001", "RUF002", "RUF003",  # UI copy/comments use deliberate typography
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S603", "ARG"]  # asserts, literal test tokens, node harness subprocess
"scripts/*" = ["S101", "S603", "S607", "S106", "S324", "ARG"]  # dev harnesses: local syncthing, demo token, non-crypto hash, FastAPI route args

[tool.pyright]
include = ["modelsync"]
typeCheckingMode = "strict"
# GPUStack/Syncthing JSON is dynamically typed (Any by nature). Totality over
# arbitrary/malformed input is proven by the hypothesis fuzz suite, not the type
# checker, so the Any-propagation rules are disabled; every other strict check
# (optional-access, argument, operator, private-usage, ...) stays on and passes.
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingParameterType = false

